--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -1,81 +1,81 @@
 .hero {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    text-align: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  text-align: center;
 }
 .hero__inner {
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(131, 58, 251, .15);
-    max-width: 340px;
-    border: 1px solid rgba(131, 58, 251, .3);
-    margin: 0 auto;
-    padding: 10px 32px;
-    margin-bottom: 32px;
-    border-radius: 24px;
-    position: relative;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(131, 58, 251, 0.15);
+  max-width: 340px;
+  border: 1px solid rgba(131, 58, 251, 0.3);
+  margin: 0 auto;
+  padding: 10px 32px;
+  margin-bottom: 32px;
+  border-radius: 24px;
+  position: relative;
 }
 .hero__inner-left {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    color: #833afb;
-    font-size: 14px;
-    font-weight: 700;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  color: #833afb;
+  font-size: 14px;
+  font-weight: 700;
 }
 .hero__inner-right {
-    background-color: #833afb;
-    border-radius: 24px;
-    padding: 10px;
-    position: absolute;
-    right: 0;
-    color: #fff;
-    font-size: 14px;
-    font-family: "SofiaSans",sans-serif;
-    font-weight: 700;
-    width: 93px;
+  background-color: #833afb;
+  border-radius: 24px;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  color: #fff;
+  font-size: 14px;
+  font-family: "SofiaSans", sans-serif;
+  font-weight: 700;
+  width: 93px;
 }
 .hero__title {
-    color: #000;
-    font-size: 82px;
-    text-align: center;
-    font-family: "SofiaSans",sans-serif;
-    font-weight: 700;
-    line-height: 90px;
-
+  color: #000;
+  font-size: clamp(3rem, 2.211rem + 3.238vw, 5.125rem);
+  text-align: center;
+  font-family: "SofiaSans", sans-serif;
+  font-weight: 700;
+  line-height: clamp(3.313rem, 2.454rem + 3.524vw, 5.625rem);
+  text-transform: capitalize;
 }
 .hero__subtitle {
-    color: #000;
-    font-size: 24px;
-    font-family: "Sofia Sans",sans-serif;
-    font-weight: 400;
-    padding-top: 20px;
-    padding-bottom: 60px;
-    line-height: 29px;
-    span {
-        color: #833afb;
-        font-weight: 800;
-    }
+  color: #000;
+  font-size: clamp(1rem, 0.814rem + 0.762vw, 1.5rem);
+  font-family: "SofiaSans", sans-serif;
+  font-weight: 400;
+  padding-top: 20px;
+  padding-bottom: 60px;
+  line-height: clamp(1.375rem, 1.212rem + 0.667vw, 1.813rem);
+  span {
+    color: #833afb;
+    font-weight: 800;
+  }
 }
 .hero-btn {
-    color: #fff;
-    font-size: 24px;
-    font-family: "Sofia Sans",sans-serif;
-    font-weight: 700;
-    margin: 0 auto;
-    margin-bottom: 16px;
+  color: #fff;
+  font-size: clamp(1.125rem, 0.986rem + 0.571vw, 1.5rem);
+  font-family: "SofiaSans", sans-serif;
+  font-weight: 700;
+  margin: 0 auto;
+  margin-bottom: 16px;
 }
 .btn {
 }
 .hero__descr {
-    color: rgba(0, 0, 0, 0.5);
-  font-size: 16px;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: clamp(0.875rem, 0.829rem + 0.19vw, 1rem);
   font-style: normal;
   margin-top: 0;
   text-align: center;
-  font-family: "Sofia Sans",sans-serif;
+  font-family: "SofiaSans", sans-serif;
   font-weight: 300;
-  line-height: 19px;
+  line-height: clamp(1.063rem, 1.016rem + 0.19vw, 1.188rem);
 }
