--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,36 +1,264 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.lang-mobile {
+  display: none;
 }
 .logo {
-    a {
-        font-size: 24px;
-        font-weight: 700;
-        color: #000;
-    }
-}
-.menu {
+  a {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 12px;
+    font-size: 24px;
+    font-weight: 700;
+    color: #000;
+  }
+}
+.menu {
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }
 .menu__item {
 }
 .menu__item-link {
-    color: #000;
-    font-weight: 500;
-    font-size: 16px;
+  color: #000;
+  font-weight: 500;
+  font-size: 16px;
 }
 .burger {
 }
 .navabar-btn {
-    padding: 10px 20px;
-    color: #fff;
-    background-color: #000;
-    border-radius: 32px;
-    font-size: 14px;
-    font-weight: 700;
+  padding: 10px 20px;
+  color: #fff;
+  background-color: #000;
+  border-radius: 32px;
+  font-size: 14px;
+  font-weight: 700;
+}
+.lang {
+  position: relative;
+}
+.main-lang {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 4px;
+  max-width: 78px;
+  border-radius: 4px 4px 4px 4px;
+  background-color: #f4f4f6;
+  color: #000;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+}
+.lang-dropdown {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  border-radius: 4px 4px 4px 4px;
+  cursor: pointer;
+  max-width: 78px;
+  a {
+    color: #000;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+.lang:hover {
+  .lang-dropdown {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 4px;
+  }
+}
+.burger {
+  display: none;
+  cursor: pointer;
+}
+.navabar-btn-mobile {
+  display: none;
+}
+.navabar-btn-pc {
+  display: block;
+}
+.logo-mobile {
+  display: none;
+}
+
+// Burger menu styles
+@media screen and (max-width: $burgerBreakpoint) {
+  // .menu
+  .menu {
+    position: fixed;
+    background-color: #fff;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    display: none;
+
+    &.active {
+      display: flex;
+      left: 0;
+      top: 0;
+      height: 100vh;
+      width: 100vw;
+      flex-direction: column;
+      pointer-events: all;
+      justify-content: center;
+      align-items: center;
+      z-index: 22;
+      animation: fade 0.1s linear;
+    }
+  }
+  .lang-mobile {
+    display: flex;
+    max-width: 280px;
+    border: 1px solid #f4f4f6;
+    border-radius: 4px 4px 4px 4px;
+    background-color: #fff;
+  }
+  .lang-mobile-bg {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 12px 4px;
+    width: 140px;
+    border-radius: 4px 4px 4px 4px;
+    justify-content: center;
+    background-color: #f4f4f6;
+    color: #000;
+    font-size: 16px;
+    font-style: normal;
+    font-family: "Sofia Sans", sans-serif;
+    font-weight: 500;
+  }
+  .lang-mobile-de {
+    gap: 10px;
+    width: 140px;
+    display: flex;
+    align-items: center;
+    padding: 12px 4px;
+    position: relative;
+    max-width: 140px;
+    box-sizing: border-box;
+    align-items: center;
+    border-radius: 4px 4px 4px 4px;
+    justify-content: center;
+    color: #000;
+    font-size: 16px;
+    font-style: normal;
+    font-family: "Sofia Sans", sans-serif;
+    font-weight: 500;
+  }
+
+  .navabar-btn-mobile {
+    display: block;
+    width: 95%;
+    text-align: center;
+    font-size: 16px;
+  }
+  .navabar-btn-pc {
+    display: none;
+  }
+  .btn-and-lang {
+    display: none;
+  }
+  .logo-mobile {
+    display: block;
+    position: absolute;
+    left: 3%;
+    top: 4%;
+  }
+  .menu__item-link {
+    color: #000;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: left;
+  }
+  .menu__item {
+    width: 100%;
+    padding-left: 24px;
+  }
+  // .burger
+  .burger {
+    display: block;
+    position: relative;
+    height: 20px;
+    width: 30px;
+    z-index: 102;
+    cursor: pointer;
+
+    &.active-burger {
+      &:before {
+        background: #833afb;
+        transform: rotate(45deg);
+        transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s all;
+        top: 8px;
+        border-radius: 2px 2px 2px 2px;
+      }
+
+      &:after {
+        background: #833afb;
+        transform: rotate(-45deg);
+        bottom: 10px;
+        width: 27px !important;
+        border-radius: 2px 2px 2px 2px;
+        transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s all;
+      }
+
+      & span {
+        transform: scale(0);
+      }
+    }
+
+    &:before,
+    &:after {
+      content: "";
+      position: absolute;
+      height: 2px;
+      width: 100%;
+      background: #833afb;
+      transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s all;
+      border-radius: 2px 2px 2px 2px;
+    }
+
+    &:before {
+      top: 0;
+    }
+
+    &::after {
+      bottom: 0;
+      width: 27px;
+      margin-left: 3px;
+      border-radius: 2px 2px 2px 2px;
+    }
+
+    span {
+      position: absolute;
+      top: 9px;
+      right: 0;
+      width: 100%;
+      background: #833afb;
+      height: 2px;
+      transform: scale(1);
+      transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s all;
+    }
+  }
+
+  // .menu__item
+  .menu__item-first {
+    margin-top: 70px;
+  }
+}
+.btn-and-lang {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
