--- a/src/scss/_step-form.scss
+++ b/src/scss/_step-form.scss
@@ -112,6 +112,7 @@
 // Кнопки навигации формы
 // .step__buttons
 .step__buttons {
+  position: relative;
   margin-top: 32px;
   display: flex;
   // position: absolute;
@@ -119,7 +120,14 @@
   // bottom: -50%;
 
   // .button
-
+  .step__buttons-disabled {
+    position: absolute;
+    width: 180px;
+    height: 32px;
+    background-color: rgba(0, 0, 0, 0.25);
+    border-radius: 32px 32px 32px 32px;
+    z-index: 2;
+  }
   .prev {
     // .prev__step
     &__step {
@@ -139,6 +147,7 @@
   padding: 8px 40px;
   color: #fff;
   overflow: hidden;
+  z-index: 1;
   position: relative;
   max-width: 180px;
   box-shadow: 0 4px 12px 4px rgba(131, 58, 251, 0.25);
@@ -178,7 +187,7 @@
 }
 .form__step-title {
   color: #000;
-  font-size: clamp(1.5rem, 1.407rem + 0.381vw, 1.75rem);
+  font-size: clamp(1.375rem, 1.236rem + 0.571vw, 1.75rem);
   font-weight: 700;
   line-height: clamp(1.813rem, 1.696rem + 0.476vw, 2.125rem);
   padding-bottom: 24px;
@@ -268,6 +277,7 @@
 }
 .form__step-end-btn {
   margin-top: 20px;
+  max-width: 180px;
 }
 .btn {
 }
@@ -343,13 +353,46 @@
     margin-top: 50px;
   }
 }
+@media screen and (max-width: 550px) {
+  .step__number-last {
+    left: -7%;
+  }
+}
+@media screen and (max-width: 530px) {
+  .step__number-last {
+    left: -15%;
+  }
+}
 @media screen and (max-width: 490px) {
   .step__number {
     max-width: 49px !important;
   }
+  .step__number-last {
+    max-width: 100px !important;
+  }
   .steps {
     margin: 0;
     margin-top: 50px;
+  }
+}
+@media screen and (max-width: 470px) {
+  .step__number-last {
+    left: -26%;
+  }
+}
+@media screen and (max-width: 435px) {
+  .step__number-last {
+    left: -34%;
+  }
+  .step-form__text-title {
+    br {
+      display: none;
+    }
+  }
+}
+@media screen and (max-width: 420px) {
+  .step__number-last {
+    left: -42%;
   }
 }
 @media screen and (max-width: 400px) {
@@ -364,7 +407,7 @@
   .form__step-second {
     max-height: 370px !important;
   }
-  .step__number-last {
+  .steps__numbers .step__number-last {
     max-width: 90px !important;
     position: relative;
     left: -5%;
