--- a/src/scss/_faq.scss
+++ b/src/scss/_faq.scss
@@ -1,6 +1,6 @@
 .faq {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: clamp(1.875rem, 1.179rem + 2.857vw, 3.75rem);
+  padding-bottom: clamp(1.875rem, 1.179rem + 2.857vw, 3.75rem);
 }
 .main-container {
 }
