--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -40,8 +40,8 @@
   z-index: -1;
 }
 .info {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: clamp(1.875rem, 1.179rem + 2.857vw, 3.75rem);
+  padding-bottom: clamp(1.875rem, 1.179rem + 2.857vw, 3.75rem);
 }
 .info__card {
   border: 12px solid #000;
