--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -311,6 +311,7 @@
     margin-right: auto;
   }
   .tabs__header-items {
+    width: 100%;
     margin-right: auto;
   }
 }
@@ -357,6 +358,17 @@
     left: -28%;
   }
 }
+@media screen and (max-width: 650px) {
+  .tabs__header-items {
+    justify-content: space-between;
+  }
+  .tabs__header-item {
+    margin: 0;
+  }
+  .tabs__header-item:last-child {
+    margin-right: 10px;
+  }
+}
 @media screen and (max-width: 600px) {
   .tabs__header-item.active {
     padding: 8px 16px;
@@ -370,5 +382,10 @@
   .info-img-abs {
     left: -70%;
     top: 67%;
+  }
+}
+@media screen and (max-width: 400px) {
+  .tabs__header-items {
+    width: 400px;
   }
 }
