--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -59,6 +59,11 @@
     font-weight: 800;
   }
 }
+.de-page {
+  .hero-btn {
+    max-width: 365px;
+  }
+}
 .hero-btn {
   color: #fff;
   font-size: clamp(1.125rem, 0.986rem + 0.571vw, 1.5rem);
