--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -67,7 +67,11 @@
 }
 .tabs__header-profile-arrow {
 }
-
+.de-page {
+  .tabs__header-items {
+    max-width: 760px;
+  }
+}
 .info-img-abs {
   position: absolute;
   width: 1000px;
